--- a/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm.WPF/MPfm.WPF.csproj
@@ -388,6 +388,9 @@
     <Resource Include="Resources\Images\Buttons\back.png" />
     <Resource Include="Resources\Images\Buttons\punch_in.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Toolbar\devices.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
