--- a/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm.Player/MPfm.Player.csproj
@@ -115,6 +115,8 @@
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Events\AudioInterruptedData.cs" />
-        <Compile Include="Objects\Segment.cs" />
+    <Compile Include="Objects\Segment.cs" />
+    <Compile Include="Services\IDecodingService.cs" />
+    <Compile Include="Services\DecodingService.cs" />
   </ItemGroup>
 </Project>
