--- a/MPfm.Player/MPfm.Player.OSX.csproj
+++ b/MPfm.Player/MPfm.Player.OSX.csproj
@@ -116,5 +116,7 @@
     <Compile Include="Objects\CastServerMetadata.cs" />
     <Compile Include="Objects\PlayerMetadata.cs" />
     <Compile Include="Objects\Segment.cs" />
+    <Compile Include="Services\IDecodingService.cs" />
+    <Compile Include="Services\DecodingService.cs" />	
   </ItemGroup>
 </Project>
