--- a/MPfm.Player/MPfm.Player.iOS.csproj
+++ b/MPfm.Player/MPfm.Player.iOS.csproj
@@ -179,5 +179,7 @@
     <Compile Include="Objects\CastServerParams.cs" />
     <Compile Include="Objects\PlayerMetadata.cs" />
         <Compile Include="Objects\Segment.cs" />
+    <Compile Include="Services\IDecodingService.cs" />
+    <Compile Include="Services\DecodingService.cs" />		
   </ItemGroup>
 </Project>
