OSX: Updated Loop Details/Segment Details UI, changed concept of segments.
- Segments do not have Start/End position anymore, but are simply
markers instead. This should make it easier for users to understand how
they work. This had an imapct in several views/presenters; also updated
SQL script.
- Added custom table view cell; trying to fix Roboto weird font
placement in table views.

--- a/MPfm.OSX/MPfm.OSX.csproj
+++ b/MPfm.OSX/MPfm.OSX.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Windows\Controllers\EditSongMetadataWindowController.cs" />
     <Compile Include="Classes\Controls\MPfmCheckBoxView.cs" />
     <Compile Include="Classes\Controls\MPfmLabel.cs" />
+    <Compile Include="Classes\Controls\MPfmTableViewCell.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
