Tests: Added almost complete unit tests for the Playlist class.
- Added TestConfigurationHelper and TestConfigurationEntity to
parametrize the unit tests (i.e. list of audio files to use for test)

--- a/MPfm.Sound.Tests/MPfm.Sound.Tests.csproj
+++ b/MPfm.Sound.Tests/MPfm.Sound.Tests.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestPlaylist.cs" />
+    <Compile Include="PlaylistTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
@@ -58,6 +58,9 @@
       <Project>{d92f718e-9a24-4b8b-9e40-77f93cf89eae}</Project>
       <Name>MPfm.Sound</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
