--- a/MPfm.Core/MPfm.Core.csproj
+++ b/MPfm.Core/MPfm.Core.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Helpers\TaskHelper.cs" />
     <Compile Include="Helpers\PathHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestConfiguration\TestConfigurationEntity.cs" />
+    <Compile Include="TestConfiguration\TestConfigurationHelper.cs" />
     <Compile Include="Tracing.cs" />
     <Compile Include="OS.cs" />
     <Compile Include="CacheStore.cs" />
