Tests: Refactored all playlist classes. More unit tests for the Playlist class.
- Split Playlist into ShufflePlaylist.

--- a/MPfm.Sound.Tests/MPfm.Sound.Tests.csproj
+++ b/MPfm.Sound.Tests/MPfm.Sound.Tests.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlaylistIntegrationTest.cs" />
+    <Compile Include="ShufflePlaylistTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PlaylistTest.cs" />
   </ItemGroup>
