--- a/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm.Sound/MPfm.Sound.csproj
@@ -119,10 +119,11 @@
     <Compile Include="PeakFiles\PeakFileFormatIncompatibleException.cs" />
     <Compile Include="PeakFiles\PeakFileProgressData.cs" />
     <Compile Include="PeakFiles\PeakFileStartedData.cs" />
+    <Compile Include="Playlists\ShufflePlaylist.cs" />
     <Compile Include="Tags\APEMetadata.cs" />
     <Compile Include="Playlists\Playlist.cs" />
     <Compile Include="Playlists\PlaylistItem.cs" />
-    <Compile Include="Playlists\PlaylistTools.cs" />
+    <Compile Include="Playlists\PlaylistHelper.cs" />
     <Compile Include="Playlists\PlaylistFileFormat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tags\APETag.cs" />
