--- a/MPfm.Sound/MPfm.Sound.iOS.csproj
+++ b/MPfm.Sound/MPfm.Sound.iOS.csproj
@@ -180,8 +180,7 @@
     <Compile Include="PeakFiles\PeakFileStartedData.cs" />
     <Compile Include="Tags\APEMetadata.cs" />
     <Compile Include="Playlists\Playlist.cs" />
-    <Compile Include="Playlists\PlaylistItem.cs" />
-    <Compile Include="Playlists\PlaylistTools.cs" />
+    <Compile Include="Playlists\PlaylistItem.cs" />    
     <Compile Include="Playlists\PlaylistFileFormat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tags\APETag.cs" />
@@ -214,5 +213,7 @@
     <Compile Include="BassNetWrapper\BaseFx.cs" />
     <Compile Include="BassNetWrapper\BaseCast.cs" />
     <Compile Include="BassNetWrapper\BaseEnc.cs" />
+<Compile Include="Playlists\ShufflePlaylist.cs" />
+    <Compile Include="Playlists\PlaylistHelper.cs" />		
   </ItemGroup>
 </Project>
