WPF: Added index columns for loops, markers and segments. Several bug fixes.
- Fixed colors in App.xaml; the header color was too bright compared to
OSX. Also fixed a missing animation when the mouse pointer leaves a list
view header.
- Removed previous custom cell for markers; replaced by a more standard
look like loops and segments.
- Added FixedWidthColumn for grid views.
- Added Index to Loop, Segment and Marker objects, and added code for
filling these properties in their respective presenters.
- Can now double click a marker to select it.
- Added code for File/Exit menu.

--- a/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm.WPF/MPfm.WPF.csproj
@@ -148,6 +148,7 @@
     </Compile>
     <Compile Include="Classes\Controls\Graphics\BasicImage.cs" />
     <Compile Include="Classes\Controls\Graphics\DisposableImageFactory.cs" />
+    <Compile Include="Classes\Controls\FixedWidthGridViewColumn.cs" />
     <Compile Include="Classes\Controls\SongGridView.cs" />
     <Compile Include="Classes\Controls\TestControl.cs" />
     <Compile Include="Classes\Controls\ImageButton.cs" />
