--- a/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm.Sound/MPfm.Sound.csproj
@@ -119,6 +119,8 @@
     <Compile Include="PeakFiles\PeakFileFormatIncompatibleException.cs" />
     <Compile Include="PeakFiles\PeakFileProgressData.cs" />
     <Compile Include="PeakFiles\PeakFileStartedData.cs" />
+    <Compile Include="Playlists\EndOfPlaylistException.cs" />
+    <Compile Include="Playlists\PlaylistRepeatType.cs" />
     <Compile Include="Playlists\ShufflePlaylist.cs" />
     <Compile Include="Tags\APEMetadata.cs" />
     <Compile Include="Playlists\Playlist.cs" />
