Updated project files for last commit.

--- a/MPfm.Sound/MPfm.Sound.Android.csproj
+++ b/MPfm.Sound/MPfm.Sound.Android.csproj
@@ -154,6 +154,8 @@
     <Compile Include="BassNetWrapper\BassWrapper.cs" />
     <Compile Include="BassNetWrapper\BaseFx.cs" />
     <Compile Include="Playlists\ShufflePlaylist.cs" />
-    <Compile Include="Playlists\PlaylistHelper.cs" />	
+    <Compile Include="Playlists\PlaylistHelper.cs" />
+	<Compile Include="Playlists\EndOfPlaylistException.cs" />
+    <Compile Include="Playlists\PlaylistRepeatType.cs" />
   </ItemGroup>
 </Project>
