--- a/MPfm.Sound/MPfm.Sound.OSX.csproj
+++ b/MPfm.Sound/MPfm.Sound.OSX.csproj
@@ -154,7 +154,9 @@
     <Compile Include="BassNetWrapper\BaseEnc.cs" />
     <Compile Include="BassNetWrapper\BaseCast.cs" />
 <Compile Include="Playlists\ShufflePlaylist.cs" />
-    <Compile Include="Playlists\PlaylistHelper.cs" />		
+    <Compile Include="Playlists\PlaylistHelper.cs" />	
+	    <Compile Include="Playlists\EndOfPlaylistException.cs" />
+    <Compile Include="Playlists\PlaylistRepeatType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\OSX\" />
