--- a/MPfm.Sound/MPfm.Sound.WindowsStore.csproj
+++ b/MPfm.Sound/MPfm.Sound.WindowsStore.csproj
@@ -134,6 +134,8 @@
     <Compile Include="BassNetKey.cs" />
 <Compile Include="Playlists\ShufflePlaylist.cs" />
     <Compile Include="Playlists\PlaylistHelper.cs" />		
+	    <Compile Include="Playlists\EndOfPlaylistException.cs" />
+    <Compile Include="Playlists\PlaylistRepeatType.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.WindowsStore.csproj">
