--- a/MPfm.Library.Tests/MPfm.Library.Tests.csproj
+++ b/MPfm.Library.Tests/MPfm.Library.Tests.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\MPfm.Core.Tests\Lib\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.core">
       <HintPath>..\MPfm.Core.Tests\Lib\nunit.core.dll</HintPath>
     </Reference>
@@ -46,12 +49,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SyncDiscoveryServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
       <Project>{d536fde5-989e-4979-9b39-63621ae4a205}</Project>
       <Name>MPfm.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MPfm.Library\MPfm.Library.csproj">
+      <Project>{2A62D229-D7FC-41DA-B676-BB1371659BFB}</Project>
+      <Name>MPfm.Library</Name>
     </ProjectReference>
     <ProjectReference Include="..\MPfm.Player\MPfm.Player.csproj">
       <Project>{feb7497c-784c-4380-874f-46fd93c82ba1}</Project>
