--- a/MPfm.Core.Tests/MPfm.Core.Tests.csproj
+++ b/MPfm.Core.Tests/MPfm.Core.Tests.csproj
@@ -51,18 +51,18 @@
     <Compile Include="TestByteArrayQueue.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
-      <Project>{d536fde5-989e-4979-9b39-63621ae4a205}</Project>
-      <Name>MPfm.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Lib\Moq.dll" />
     <Content Include="Lib\nunit.core.dll" />
     <Content Include="Lib\nunit.framework.dll" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sessions.Core\Sessions.Core.csproj">
+      <Project>{d536fde5-989e-4979-9b39-63621ae4a205}</Project>
+      <Name>Sessions.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
