--- a/MPfm.GenericControls/MPfm.GenericControls.csproj
+++ b/MPfm.GenericControls/MPfm.GenericControls.csproj
@@ -111,13 +111,13 @@
       <Project>{FEB7497C-784C-4380-874F-46FD93C82BA1}</Project>
       <Name>MPfm.Player</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.csproj">
-      <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
-      <Name>MPfm.Sound</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Sessions.Core\Sessions.Core.csproj">
       <Project>{d536fde5-989e-4979-9b39-63621ae4a205}</Project>
       <Name>Sessions.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sessions.Sound\Sessions.Sound.csproj">
+      <Project>{d92f718e-9a24-4b8b-9e40-77f93cf89eae}</Project>
+      <Name>Sessions.Sound</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
