Updated OSX project to build with libssp_player.
- Cleanup in some iOS csproj files.
- Updated .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@ build/
 [Bb]in/
 [Oo]bj/
 
+# Custom
+Output/
+Components/
+packages/
+*.userprefs
+
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
 
